<resources>
    <string name="app_name">AndroidCourseDesign</string>
    <string name="base_url">https://android.therainisme.com</string>
    <string name="request_picture_url">https://android.therainisme.com/api/picture/</string>
    
    <string name="btn_share">分享</string>
    <string name="tv_no_data">无数据</string>
    <string name="et_username">请输入用户名</string>
    <string name="et_password">请输入密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>
    <string name="btn_register_finish">完成</string>
    <string name="item_share_finish">分享</string>
    <string name="btn_share_finish">分享</string>
    <string name="et_content">添加动态内容…</string>
    <string name="tv_add_picture">添加图片</string>
    <string name="btn_select_finish">选择完成</string>
    <string name="tv_search">搜索</string>
    <string name="tv_user_name">用户%s</string>
    <string name="tv_autograph">写个签名介绍下自己吧</string>
    <string name="tv_collection_count">%d</string>
    <string name="tv_favorite_count">%d次赞</string>
    <string name="tv_content">abcdefghijklmnopqrstuvwxyz</string>
    <string name="tv_comment_count">共%d条评论</string>
    <string name="tv_comment_title">评论区</string>
    <string name="tv_comment_content">abcdefghijklmnopqrstuvwxyz</string>
    <string name="tv_title">详情界面</string>
    <string name="btn_comment">评论</string>
    <string name="et_input_comment">请输入评论内容</string>
    <string name="tv_my_space">我的动态</string>
    <string name="tv_my_comment">我的评论</string>
    <string name="tv_space_content">动态内容</string>
    <string name="tv_space_date">2021-09-07</string>
    <string name="btn_delete_space">删除</string>
    <string name="tv_my_space_title">我的动态</string>
    <string name="tv_notice_title">通知</string>
</resources>